Create app exam

--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,5 @@ GitHub.sublime-settings
 exam_scheduling_system/__pycache__/__init__.cpython-39.pyc
 exam_scheduling_system/__pycache__/settings.cpython-39.pyc
 exam_scheduling_system/__pycache__/urls.cpython-39.pyc
+exam_scheduling_system/__pycache__/__init__.cpython-39.pyc
+exam_scheduling_system/__pycache__/settings.cpython-39.pyc
