--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.4
 Django==3.2.3
 django-crispy-forms==1.11.2
 django-phonenumber-field==5.1.0
+phonenumbers==8.12.24
 psycopg2==2.8.6
 pytz==2021.1
 sqlparse==0.4.1
