--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 asgiref==3.3.4
+Cython==0.29.23
 Django==3.2.3
 django-crispy-forms==1.11.2
 django-phonenumber-field==5.1.0
+numpy==1.21.0rc1
+pandas==1.2.4
 phonenumbers==8.12.24
 psycopg2==2.8.6
+python-dateutil==2.8.1
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.1
+xlrd==2.0.1
